# cellfie-runtime-predictor

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/data/: cellfie-run-time.csv
